@@ -269,13 +269,14 @@ The raw wood for building is found using the Chopping skill.
 BODYPIERCE=BODY_PIERCING
 BODYPIERCING=BODY_PIERCING
 BODY_PIERCING=<ABILITY>\
-Usage    : BODYPIERCING (REMOVE) [TARGET NAME] [LOCATION]\n\r\
+Usage    : BODYPIERCING (REMOVE/LIST) [TARGET NAME] [LOCATION]\n\r\
+Example  : bodypiercing list\n\r\
 Example  : bodypiercing bob ears\n\r\
 Example  : bodypiercing remove bob ears\n\r\
 This skill allows a player to pierce (and heal the piercings) of the body parts of a target.  The target \
 must hold still for it, of course.  What results can only be seen when the \
-proper wear location is not covered by clothing.  Parts available for piercing \
-include the lip, nose, ears, eyebrows, nipples, and belly button.
+proper wear location is not covered by clothing.  Available body parts for piercing increase \
+with level.
 
 BOOKEDIT=BOOKEDITING
 BOOK_EDITING=BOOKEDITING
